# example-data

./: Diagnosis.yaml  Diagnosis_id.yaml  GDC to CCDH conversion.ipynb  GDC to CCDH conversion.md  GDC to CRDC-H conversion.ipynb  GDC_to_CCDH_conversion_pypi.ipynb  LICENSE  Makefile  Pipfile  README.md  cancer_stage_observation_set.py  decimal_test.py  gen_diag_with_stage_obs_set.py  instantiate_diag_with_stage_obs_set.py  instantiate_from_yaml.py  linkml_linkml_issue_463_test.py  min_csos.ipynb  pdc_to_crdch_transformation.ipynb  pyproject.toml  tobacco_expo.py  utils.py  via_terminology_server.ipynb
.github/workflows/: pytest.yaml
ccdh/: ccdhmodel.py  ccdhmodel.yaml
ccdh-pilot/: README.md  test_all.py  test_build.py  test_import.py  test_transform_gdc.py  test_transform_pdc.py  test_validate_all.py  transform.py
cptac2-subject-09CO022/: CDA example for subject 09CO022.ipynb  cda_case_459e3b69-63d6-11e8-bcf1-0a2705229b82.json  cda_case_c5421e34-e5c7-4ba5-aed9-146a5575fd8d.json  cda_derived_from_09CO022.json  gdc_subject_09CO022.json  gdc_subject_09CO022.tsv  gdc_subject_09CO022.xml  pdc_subject_09CO022.json
crdc-h-model/: crdc-h-model-json-schema.json  datatypes.yaml
head-and-mouth/: Head and Mouth Cancer Datasets.ipynb  ccdh-head-and-mouth.jsonld  ccdhmodel.py  diagnoses.jsonld  diagnoses.ttl  gdc-head-and-mouth.json  pdc-head-and-mouth.json  specimens.jsonld  test_load.py
linkml_linkml_issue_463_test_data/: CancerStageObservation.yaml  CancerStageObservationSet.yaml  CodeableConcept.yaml  Coding.yaml
notes/: environment_notes_202109281053.txt
(+12 files in other folders)
